--- a/mksite.client/src/assets/Footer.module.css
+++ b/mksite.client/src/assets/Footer.module.css
@@ -1,6 +1,10 @@
+div {
+  display: flex;
+  flex-direction: column;
+}
+
 .footer {
   height: 150px;
-  bottom: 0;
   background-color: rgba(194, 10, 114, 0.1);
   color: rgba(12, 9, 13, 0.628);
   justify-items: left;
